<resources>
    <string name="app_name">StarwarsCollectableGame</string>
    <string name="title_activity_maps" translatable="false">" "</string>
    <string name="title_activity_main" translatable="false">" "</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_subtitle">Star Wars Collection Game</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">" "</string>

    <string name="menu_Map">Map</string>
    <string name="menu_Settings">Settings</string>
    <string name="menu_Collection">Collection</string>
    <string name="menu_Profile">Profile\'s</string>
    <string name="menu_Film">Films</string>
    <string name="menu_People">People</string>
    <string name="menu_Planet">Planet\'s</string>
    <string name="menu_Species">Species</string>
    <string name="menu_Starships">Starships</string>
    <string name="menu_Vehicles">Vehicles</string>

    <string name="preference_id" translatable="false">123hihihi</string>
    <string name="preferences_theme_use_sith" translatable="false">useSith</string>
    <string name="preferences_theme_open_settings" translatable="false">openSettings</string>
    <string name="preferences_database_loaded" translatable="false">databaseLoaded</string>
    <string name="preferences_player_id" translatable="false">playerId</string>
    <string name="addedit_player_name_hint">Name</string>
    <string name="splashscreen_footer">Lucas Prins and Sebastiaan Colijn</string>
    <string name="marker_yourlocation">Your Location</string>
    <string name="nav_header_title">" "</string>
    <string name="settings_switch_off">Join The Dark Side</string>
    <string name="settings_switch_on">Joint The LightSide</string>
    <string name="collection_film_filmid">Episode</string>
    <string name="settings_button_refilldatabase">Refil Database</string>
    <string name="settings_popup_title">Are you sure?</string>
    <string name="settings_popup_message">If you refill the database all player-data will also be lost. It is also not guaranteed that the correct data wil be loaded back. So be sure before commiting.</string>
    <string name="settings_popup_cancel">Cancel</string>
    <string name="settings_popup_confirm">Confirm</string>
    <string name="markerhandler_maxed_film">You have every film at max level</string>
    <string name="markerhanlder_levelup">" Leveled Up to Level "</string>
    <string name="markerhandler_clicktoreveal">Tap to Reveal what you got</string>
    <string name="markerhandler_hidden_film">Hidden Film</string>
    <string name="markerhandler_hidden_people">Hidden Person</string>
    <string name="markerhandler_hidden_planet">Hidden Planet</string>
    <string name="markerhandler_hidden_species">Hidden Species</string>
    <string name="markerhandler_hidden_starship">Hidden Starship</string>
    <string name="markerhandler_hidden_vehicle">Hidden Vehicle</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="homeworld">Homeworld</string>
    <string name="eyecolor">Eyecolor</string>
    <string name="haircolor">Haircolor</string>
    <string name="birthyear">Birthyear</string>
    <string name="height">Height</string>
    <string name="mass">Mass</string>
    <string name="unknown">Unknown</string>
    <string name="wip_fragment">This section is still a Work In Progress. It might be implemented in a later version.</string>
    <string name="splashscreen_header">Header</string>
    <string name="splashscreen_toplogo">Toplogo</string>
    <string name="splashscreen_bottomlogo">bottom</string>
</resources>
