<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.starwarscollectablegame.View.ui.map.MapFragment"
        android:label="@string/menu_Map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_collection"
        android:name="com.example.starwarscollectablegame.View.ui.collection.CollectionFragment"
        android:label="@string/menu_Collection"
        tools:layout="@layout/fragment_collection"/>


    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.starwarscollectablegame.View.ui.profile.ProfileFragment"
        android:label="@string/menu_Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.starwarscollectablegame.View.ui.settings.SettingsFragment"
        android:label="@string/menu_Settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_film"
        android:name="com.example.starwarscollectablegame.View.ui.collection.films.FilmFragment"
        android:label="@string/menu_Collection"
        tools:layout="@layout/fragment_collection_film"/>

    <fragment
        android:id="@+id/nav_people"
        android:name="com.example.starwarscollectablegame.View.ui.collection.people.PeopleFragment"
        android:label="@string/menu_Collection"
        tools:layout="@layout/fragment_collection_people"/>

</navigation>